Fix overlay covering ad close button

--- a/web/css/watch.css
+++ b/web/css/watch.css
@@ -30,7 +30,7 @@ html.video-done {
 }
 
 #overlay {
-    bottom: 130px;
+    bottom: 155px;
     left: 0;
     position: absolute;
     height: 100%;
